src/test/ui/type-alias-impl-trait/inference-cycle.stderr
error[E0391]: cycle detected when computing type of `m::Foo::{opaque#0}`
  --> $DIR/inference-cycle.rs:5:16
   |
LL |     type Foo = impl std::fmt::Debug;
   |                ^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires type-checking `m::bar`...
  --> $DIR/inference-cycle.rs:15:9
   |
LL |         is_send(foo()); // Today: error
   |         ^^^^^^^
   = note: ...which requires evaluating trait selection obligation `m::Foo: core::marker::Send`...
   = note: ...which again requires computing type of `m::Foo::{opaque#0}`, completing the cycle
note: cycle used when checking item types in module `m`
  --> $DIR/inference-cycle.rs:4:1
   |
LL | mod m {
   | ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
